--- a/backend/resources/question-publico.html
+++ b/backend/resources/question-publico.html
@@ -159,6 +159,18 @@
                                 </div>
                             </div>
                             <div>
+                                <label class="block text-sm font-medium text-foreground mb-1">Tiempo laborando</label>
+                                <select name="antiguedad_laboral" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                    <option value="">Selecciona</option>
+                                    <option value="<1a">Menos de 1 año</option>
+                                    <option value="1-3a">1 a 3 años</option>
+                                    <option value="3-5a">3 a 5 años</option>
+                                    <option value=">5a">Más de 5 años</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div>
                                 <label class="block text-sm font-medium text-foreground mb-1">Ingreso mensual aproximado</label>
                                 <select name="ingreso" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                     <option value="">Selecciona</option>
@@ -166,6 +178,15 @@
                                     <option value="500k-800k">500 mil - 800 mil</option>
                                     <option value="800k-1.2m">800 mil - 1.2M</option>
                                     <option value=">1.2m">Más de 1.2M</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-foreground mb-1">¿Tienes deudas actualmente?</label>
+                                <select name="tiene_deudas" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                    <option value="">Selecciona</option>
+                                    <option value="no">No</option>
+                                    <option value="si_1_2">Sí, 1-2 créditos</option>
+                                    <option value="si_3_mas">Sí, 3 o más</option>
                                 </select>
                             </div>
                         </div>
@@ -213,42 +234,60 @@
                 </div>
 
                 <div id="step-3" class="space-y-4 hidden">
-                    <h2 class="text-lg font-semibold text-foreground">3. Datos de contacto</h2>
+                    <h2 class="text-lg font-semibold text-foreground">3. Perfil financiero</h2>
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Nombre completo *</label>
-                            <input type="text" name="nombre" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="Tu nombre" required>
+                            <label class="block text-sm font-medium text-foreground mb-1">¿Has tenido créditos antes? *</label>
+                            <select name="experiencia_crediticia" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                <option value="">Selecciona</option>
+                                <option value="si_bancarios">Sí, con bancos</option>
+                                <option value="si_cooperativas">Sí, con cooperativas</option>
+                                <option value="si_otros">Sí, con otras entidades</option>
+                                <option value="no">No, es mi primer crédito</option>
+                            </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Correo *</label>
-                            <input type="email" name="email" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="correo@ejemplo.com" required>
+                            <label class="block text-sm font-medium text-foreground mb-1">Historial de pagos *</label>
+                            <select name="historial_mora" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                <option value="">Selecciona</option>
+                                <option value="siempre_al_dia">Siempre al día</option>
+                                <option value="atrasos_ocasionales">Atrasos ocasionales (1-2 veces)</option>
+                                <option value="atrasos_frecuentes">Atrasos frecuentes</option>
+                                <option value="no_aplica">No aplica / Primer crédito</option>
+                            </select>
                         </div>
                     </div>
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Teléfono / WhatsApp *</label>
-                            <input type="tel" name="telefono" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="88887777" required minlength="7" maxlength="15">
+                            <label class="block text-sm font-medium text-foreground mb-1">Tipo de vivienda *</label>
+                            <select name="tipo_vivienda" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                <option value="">Selecciona</option>
+                                <option value="propia_pagada">Propia (pagada)</option>
+                                <option value="propia_hipotecada">Propia (con hipoteca)</option>
+                                <option value="alquilada">Alquilada</option>
+                                <option value="familiar">Familiar / Prestada</option>
+                            </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Provincia (opcional)</label>
-                            <select name="provincia" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                            <label class="block text-sm font-medium text-foreground mb-1">Personas a tu cargo *</label>
+                            <select name="dependientes" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <option value="">Selecciona</option>
-                                <option value="san_jose">San José</option>
-                                <option value="alajuela">Alajuela</option>
-                                <option value="cartago">Cartago</option>
-                                <option value="heredia">Heredia</option>
-                                <option value="guanacaste">Guanacaste</option>
-                                <option value="puntarenas">Puntarenas</option>
-                                <option value="limon">Limón</option>
+                                <option value="0">Ninguna</option>
+                                <option value="1-2">1 - 2 personas</option>
+                                <option value="3-4">3 - 4 personas</option>
+                                <option value=">4">Más de 4 personas</option>
                             </select>
                         </div>
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-foreground mb-1">Canal preferido</label>
-                        <select name="canal" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
-                            <option value="whatsapp">WhatsApp</option>
-                            <option value="llamada">Llamada</option>
-                            <option value="correo">Correo</option>
+                        <label class="block text-sm font-medium text-foreground mb-1">¿Cómo conociste Credipep?</label>
+                        <select name="origen_lead" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                            <option value="">Selecciona</option>
+                            <option value="redes_sociales">Redes sociales</option>
+                            <option value="recomendacion">Recomendación</option>
+                            <option value="google">Búsqueda en Google</option>
+                            <option value="publicidad">Publicidad</option>
+                            <option value="otro">Otro</option>
                         </select>
                     </div>
                 </div>
@@ -500,13 +539,12 @@
                 }
             }
             if (index === 2) {
-                const nombre = document.querySelector('input[name="nombre"]').value.trim();
-                const email = document.querySelector('input[name="email"]').value.trim();
-                const tel = document.querySelector('input[name="telefono"]').value.trim();
-                const emailOk = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
-                const telOk = /^\d{7,15}$/.test(tel);
-                if (!nombre || !emailOk || !telOk) {
-                    showAlert('Revisa nombre, correo y teléfono.');
+                const experiencia = document.querySelector('select[name="experiencia_crediticia"]').value;
+                const historial = document.querySelector('select[name="historial_mora"]').value;
+                const vivienda = document.querySelector('select[name="tipo_vivienda"]').value;
+                const dependientes = document.querySelector('select[name="dependientes"]').value;
+                if (!experiencia || !historial || !vivienda || !dependientes) {
+                    showAlert('Completa todos los campos obligatorios del perfil financiero.');
                     return false;
                 }
             }
@@ -520,18 +558,20 @@
                 data.monto = document.querySelector('select[name="monto"]').value;
                 data.uso_credito = document.querySelector('select[name="uso_credito"]').value;
                 data.situacion_laboral = document.getElementById('companyValue').value;
+                data.antiguedad_laboral = document.querySelector('select[name="antiguedad_laboral"]').value;
                 data.ingreso = document.querySelector('select[name="ingreso"]').value;
+                data.tiene_deudas = document.querySelector('select[name="tiene_deudas"]').value;
             }
             if (interes === 'servicios_legales' || interes === 'ambos') {
                 data.tramites = Array.from(document.querySelectorAll('input[name="tramites"]:checked')).map(el => el.value);
                 data.urgencia = document.querySelector('select[name="urgencia"]').value;
                 data.detalle_legal = document.querySelector('textarea[name="detalle_legal"]').value;
             }
-            data.nombre = document.querySelector('input[name="nombre"]').value.trim();
-            data.email = document.querySelector('input[name="email"]').value.trim();
-            data.telefono = document.querySelector('input[name="telefono"]').value.trim();
-            data.provincia = document.querySelector('select[name="provincia"]').value;
-            data.canal = document.querySelector('select[name="canal"]').value;
+            data.experiencia_crediticia = document.querySelector('select[name="experiencia_crediticia"]').value;
+            data.historial_mora = document.querySelector('select[name="historial_mora"]').value;
+            data.tipo_vivienda = document.querySelector('select[name="tipo_vivienda"]').value;
+            data.dependientes = document.querySelector('select[name="dependientes"]').value;
+            data.origen_lead = document.querySelector('select[name="origen_lead"]').value;
             return data;
         }
 
