--- a/backend/resources/question-propio.html
+++ b/backend/resources/question-propio.html
@@ -124,7 +124,7 @@
                 </div>
 
                 <div id="step-2" class="space-y-4 hidden">
-                    <h2 class="text-lg font-semibold text-foreground">2. Detalles del negocio y crédito</h2>
+                    <h2 class="text-lg font-semibold text-foreground">2. Financiamiento y capacidad de pago</h2>
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
                             <label class="block text-sm font-medium text-foreground mb-1">Monto requerido *</label>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="grid md:grid-cols-2 gap-4">
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Ingresos mensuales del negocio *</label>
+                            <label class="block text-sm font-medium text-foreground mb-1">Ingresos mensuales aproximados *</label>
                             <select name="ingreso" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <option value="">Selecciona</option>
                                 <option value="300k-500k">300 mil - 500 mil</option>
@@ -158,7 +158,7 @@
                             </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Tiempo con el negocio *</label>
+                            <label class="block text-sm font-medium text-foreground mb-1">Tiempo como independiente *</label>
                             <select name="antiguedad" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <option value="">Selecciona</option>
                                 <option value="<1a">Menos de 1 año</option>
@@ -179,10 +179,9 @@
                             </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-foreground mb-1">Tipo de respaldo</label>
+                            <label class="block text-sm font-medium text-foreground mb-1">Tipo de respaldo disponible</label>
                             <select name="garantia" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <option value="">Selecciona</option>
-                                <option value="facturacion">Flujo / facturación</option>
                                 <option value="propiedad">Propiedad</option>
                                 <option value="vehiculo">Vehículo</option>
                                 <option value="fiador">Fiador</option>
@@ -191,8 +190,8 @@
                         </div>
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-foreground mb-1">Breve contexto (opcional)</label>
-                        <textarea name="detalle" rows="3" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="Describe el trámite y cómo usarás el financiamiento."></textarea>
+                        <label class="block text-sm font-medium text-foreground mb-1">Breve descripción del trámite (opcional)</label>
+                        <textarea name="detalle" rows="3" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm" placeholder="Ej: divorcio de mutuo acuerdo, traspaso de propiedad familiar, sucesión de herencia, etc."></textarea>
                     </div>
                 </div>
 
